updated color and added focus method

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </div>
 
     <script>
+      
+
       let randomNumber = Math.floor(Math.random() * 100) + 1;
 
       const guesses = document.querySelector(".guesses");
@@ -60,6 +62,8 @@
 
       let guessCount = 1;
       let resetButton;
+      guessField.focus();
+
 
       function checkGuess() {
         let userGuess = Number(guessField.value);
@@ -115,7 +119,7 @@
         guessField.value = "";
         guessField.focus();
 
-        lastResult.style.backgroundColor = "white";
+        lastResult.style.backgroundColor = "lightgrey";
 
         randomNumber = Math.floor(Math.random() * 100) + 1;
       }
